external-crates/move/crates/move-compiler/tests/move_check/parser/recovery_parse_member_no_token.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01008]: invalid hex string
  ┌─ tests/move_check/parser/recovery_parse_member_no_token.move:5:9
  │
5 │         x"abcd
  │         ^^^^^^ Missing closing quote (") after byte string

error[E04007]: incompatible types
  ┌─ tests/move_check/parser/recovery_parse_member_no_token.move:8:36
  │    
8 │         public fun wrong_return(): u64 {
  │                                    --- Expected: 'u64'
  │ ╭──────────────────────────────────────^
  │ │ ╭────────────────────────────────────'
9 │ │ │     }
  │ ╰─│─────^ Invalid return expression
  │   ╰─────' Given: '()'
